# scrapy-selenium4

./: .pylintrc  README.md  pyproject.toml
scrapy_selenium4/: http.py  middlewares.py
tests/: test_cases.py  test_middlewares.py
