[tool.poetry]
name = "scrapy-selenium4"
version = "0.0.8"
description = "Scrapy middleware for Selenium 4"
authors = ["Jiri <346563+007C39@users.noreply.github.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.19.0"
Scrapy = "^2.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



