[tool.poetry]
name = "scrapy-selenium4"
version = "0.0.8"
description = "Scrapy middleware for Selenium 4"
authors = ["Jiri <346563+007C39@users.noreply.github.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.19.0"
Scrapy = "^2.11.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
mccabe = "^0.7.0"
flake8 = "^7.0.0"
pycodestyle = "^2.11.1"
pylint = "^3.2.2"
bandit = "^1.7.8"
ruff = "^0.4.4"
dodgy = "^0.2.1"
vulture = "^2.11"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
